--- a/carousel/index.html
+++ b/carousel/index.html
@@ -91,6 +91,9 @@
             <a class="nav-link" href="#">Link</a>
           </li>
           <li class="nav-item">
+            <a class="nav-link" href="#">Contact</a>
+          </li>
+          <li class="nav-item">
             <a class="nav-link disabled">Disabled</a>
           </li>
         </ul>
