--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
       </div>
     </div>
 </header>
+    <!-- End of header -->
 
 <div class="container">
   
@@ -56,13 +57,11 @@
   <p>This is some text.</p>
   
 </div>
-<!-- END OF CONTAINER -->
-  
-  
 
+<!-- END OF CONTAINER -->
+    
     <script src="js/bootstrap.bundle.min.js"></script>
     <script src="js/bootstrap.bundle.min.js.map"></script>
-
       
   </body>
 </html>
