--- a/index.html
+++ b/index.html
@@ -51,6 +51,29 @@
 </header>
     <!-- End of header -->
 
+<!-- banner -->
+
+<div class="container-fluid" >
+  <!-- row -->
+  <div class="row" style="background-image: url();">
+    <!-- column 1 -->
+    <div class="col-sm-8 bg" >
+      <h1>
+        Hello, I'm <br>
+        OJOK MICHAEL OCAN
+      </h1>
+
+    </div>
+    <!-- column 2 -->
+    <div class="col-sm-4"> 
+  
+    </div>
+  </div>
+</div>
+
+
+<!-- banned end -->
+
 <div class="container">
   
   <h1>My First Bootstrap Page</h1>
