--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
     <div class="col-sm-8 bg" >
       <h1>
         Hello, I'm <br>
-        OJOK MICHAEL OCAN
+        Ojok Michael Ocan
       </h1>
 
     </div>
@@ -76,8 +76,8 @@
 
 <div class="container">
   
-  <h1>My First Bootstrap Page</h1>
-  <p>This is some text.</p>
+  <!-- <h1>My First Bootstrap Page</h1>
+  <p>This is some text.</p> -->
   
 </div>
 
