--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <header>
     <div class="container-fluid">
       <!-- row -->
-      <div class="row" style="height: 50px; background-color: rgb(0, 81, 128);">
+      <div class="row" style="height: 50px; background-color: rgb(19, 34, 87);">
         <!-- column 1 -->
         <div class="col-sm-4 bg" ></div>
         <!-- column 2 -->
@@ -55,17 +55,26 @@
 
 <div class="container-fluid" >
   <!-- row -->
-  <div class="row" style="background-image: url();">
+  <div class="row" style="background-image: url(Images/background/background_image.jpg); height: 500px;">
     <!-- column 1 -->
-    <div class="col-sm-8 bg" >
+    <div class="col-sm-8 bg mt-5 text-white" >
       <h1>
         Hello, I'm <br>
         Ojok Michael Ocan
       </h1>
+      <p >
+        I am a creative front end developer that is is passionate about creating great 
+        front-end designs and leading highly effective teams. 
+        I am also experienced in Geographical Information Systems Development and Analysis.
+      </p>
+      <button>
+        Job
+      </button>
+      <button> Michael</button>
 
     </div>
     <!-- column 2 -->
-    <div class="col-sm-4"> 
+    <div class="col-sm-4 mt-5"> 
   
     </div>
   </div>
