--- a/index.html
+++ b/index.html
@@ -90,7 +90,10 @@
       <p> Here are the things that I can do in my line of speciality </p>
     </div>
     <div class="row">
-      <div class="col-sm-4">1</div>
+      <div class="col-sm-4">
+        <img src="images/services/monitor.png" alt="">
+        
+      </div>
       <div class="col-sm-4">1</div>
       <div class="col-sm-4">1</div>
     </div>
