--- a/index.html
+++ b/index.html
@@ -90,27 +90,44 @@
       <p> Here are the things that I can do in my line of speciality </p>
     </div>
     <div class="row">
+
       <div class="col-sm-4 mt-5">
         <img src="images/services/monitor.png" alt="#"
         style="width: 70px; height: 70px; margin-left: auto; margin-right: auto; display: block;">
         <h3>
           Web Designing
         </h3>
-        
+        <p> <a href="#">
+          I create websites with great user experience, stunning graphics package 
+          alongside and they are easy to manage
+        </a>
+        </p>        
       </div>
+
       <div class="col-sm-4 mt-5">
         <img src="images/services/developer.png" alt="" 
          style="width: 70px; height: 70px; margin-left: auto; margin-right: auto; display: block;">
         <h3>
           UI/UX Design
         </h3>
+        <p> <a href="#">
+          I create worldclass customised softwares that serve the market 
+          needs for businesses , startups and organisations.
+        </a> 
+        </p>
       </div>
+
       <div class="col-sm-4 mt-5">
         <img src="images/services/gis.jpg" alt=""
         style="width: 70px; height: 70px; margin-left: auto; margin-right: auto; display: block;">
         <h3>
           GIS Analysis / Development
         </h3>
+        <p> <a href="#">
+          I create websites great user experience, stunning graphics package
+          alongside and they are easy to manage.
+        </a>
+        </p>
       </div>
     </div>
     
