--- a/index.html
+++ b/index.html
@@ -133,18 +133,40 @@
   </div>
 </div>
 
-<div class="container-fluid" style="background-color: black; text-align: center; color: white; padding-top: 30px;">
+<div class="container-fluid" style="background-color: rgb(19, 18, 18); text-align: center; color: white; padding-top: 30px;">
   <h1> What people say </h1>
   <div class="container">
     <div class="row">
-      <div class="col-sm-4">1</div>
-      <div class="col-sm-4"> THIS IS WHAT PEOPLE ARE SAYING </div>
-      <div class="col-sm-4">1</div>
+      <div class="col-sm-3">1</div>
+      <div class="col-sm-6" style="background-color: antiquewhite; color: black;"> 
+        THIS IS WHAT PEOPLE ARE SAYING <br>
+        This is the love <br>
+        of my life <br>
+        I look for the day that we shall get married 
+        <br>
+        THIS IS WHAT PEOPLE ARE SAYING <br>
+        This is the love <br>
+        of my life <br>
+        I look for the day that we shall get married 
+        <br>
+      </div>
+
+      <div class="col-sm-3">1</div>
     </div>
   </div>
 </div>
 
 <!-- END OF CONTAINER -->
+
+<!-- footer -->
+<div class="container-fluid text-white" style="background-color:rgb(19, 18, 18);">
+  <footer>
+    <p> Ojok Michael Ocan</p>
+    
+    </footer>
+
+</div>
+
     
     <script src="js/bootstrap.bundle.min.js"></script>
     <script src="js/bootstrap.bundle.min.js.map"></script>
