--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
       <!-- row -->
       <div class="row" style="height: 50px; background-color: rgb(19, 34, 87);">
         <!-- column 1 -->
-        <div class="col-sm-4 bg" ></div>
+        <div class="col-md-4 col-sm-12 bg"></div>
         <!-- column 2 -->
-        <div class="col-sm-8"> 
+        <div class="col-md-8 col-sm-12"> 
           <ul class="nav justify-content-center">
             <li class="nav-item">
               <a class="nav-link text-white" href="#" style="font-size: 23px;">
@@ -55,89 +55,92 @@
 
 <div class="container-fluid" >
   <!-- row -->
-  <div class="row" style="background-image: url(Images/background/background_image.jpg); height: 470px;">
+  <div class="row" style="background-image: url(Images/background/background_image.jpg); height: 400px;">
+    
     <!-- column 1 -->
-    <div class="col-sm-8 bg mt-5 text-white" >
+    <div class="col-md-8 col-sm-12 mt-5 text-white" >
       <h1>
         Hello, I'm <br>
         Ojok Michael Ocan
       </h1>
-      <p>
+      <p style="font-size: 20px; margin-top: 20px; text-align: justify;">
         I am a creative front end developer that is is passionate about creating great 
         front-end designs and leading highly effective teams. 
         I am also experienced in Geographical Information Systems Development and Analysis.
       </p>
+      <!-- button -->
       <button>
         <a href="#"> Hire Me </a>
       </button>
+      
       <button> 
         <a href="documents/Ojok_Michael_Ocan_CV.pdf"> Download CV </a>
       </button>
 
     </div>
     <!-- column 2 -->
-    <div class="col-sm-4 mt-5"> 
-      <img src="images/personalimages/personal_pics/dopeboy2.jpg" alt="" height="400px" width="350px" style="border-radius: 50%;">
+    <div class="col-md-4 col-sm-12 mt-5"> 
+      <img src="images/personalimages/personal_pics/dopeboy2.jpg" alt="pic" height="350px" width="300px" style="border-radius: 50%;">
   
     </div>
   </div>
 </div>
 <!-- banner end -->
 <div class="container-fluid bg-black text-white">
-  <div class="container ">
-    <div class="services">
-      <h1> What I offer </h1>
-      <p> Here are the things that I can do in my line of speciality </p>
-    </div>
+  
     <div class="row">
+      <h1 class="text-center"> What I offer </h1>
+      <p class="text-center"> Here are the things that I can do in my line of speciality </p>
+    </div>
 
-      <div class="col-sm-4 mt-5">
+    <div class="row" style="height: 280px;">
+      <div class="col-md-4 col-sm-12 mt-5">
         <img src="images/services/monitor.png" alt="#"
         style="width: 70px; height: 70px; margin-left: auto; margin-right: auto; display: block;">
         <h3>
           Web Designing
         </h3>
-        <p> <a href="#" class="serv_p">
+        <p class="text-center "> <a href="#" class="text-decoration-none text-white">
           I create websites with great user experience, stunning graphics package 
           alongside and they are easy to manage
         </a>
         </p>        
       </div>
 
-      <div class="col-sm-4 mt-5">
+      <div class="col-md-4 col-sm-12 mt-5">
         <img src="images/services/developer.png" alt="" 
          style="width: 70px; height: 70px; margin-left: auto; margin-right: auto; display: block;">
         <h3>
           UI/UX Design
         </h3>
-        <p> <a href="#" class="serv_p">
+        <p class="text-center"> <a href="#" class="text-decoration-none text-white">
           I create worldclass customised softwares that serve the market 
           needs for businesses , startups and organisations.
         </a> 
         </p>
       </div>
 
-      <div class="col-sm-4 mt-5">
+      <div class="col-md-4 col-sm-12 mt-5">
         <img src="images/services/gis.jpg" alt=""
         style="width: 70px; height: 70px; margin-left: auto; margin-right: auto; display: block;">
         <h3>
           GIS Analysis / Development
         </h3>
-        <p > <a href="#" class="serv_p">
+        <p class="text-center"> <a href="#" class="text-decoration-none text-white " >
           I create websites great user experience, stunning graphics package
           alongside and they are easy to manage.
         </a>
         </p>
       </div>
     </div>
-  </div>
+ 
 </div>
 
 <div class="container-fluid" style="background-color: rgb(19, 18, 18); text-align: center; color: white; padding-top: 30px;">
   <h1> What people say </h1>
   <div class="container">
     <div class="row">
-      <div class="col-sm-3">1</div>
+      <div class="col-sm-3" style="visibility: hidden;">1</div>
       <div class="col-sm-6" style="background-color: antiquewhite; color: black;"> 
         THIS IS WHAT PEOPLE ARE SAYING <br>
         This is the love <br>
@@ -151,7 +154,7 @@
         <br>
       </div>
 
-      <div class="col-sm-3">1</div>
+      <div class="col-sm-3" style="visibility: hidden;">1</div>
     </div>
   </div>
 </div>
