--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
         Hello, I'm <br>
         Ojok Michael Ocan
       </h1>
-      <p style="font-size: 20px; margin-top: 20px; text-align: justify;">
+      <p style="font-size: 22px; margin-top: 20px; text-align: justify;">
         I am a creative front end developer that is is passionate about creating great 
         front-end designs and leading highly effective teams. 
         I am also experienced in Geographical Information Systems Development and Analysis.
@@ -138,23 +138,30 @@
 
 <div class="container-fluid" style="background-color: rgb(19, 18, 18); text-align: center; color: white; padding-top: 30px;">
  
+  <div class="row col-sm-12 ">
+    <h1> What people say </h1>
+ </div>
+
     <div class="row">
-      <h1> What people say </h1>
-      <div class="col-sm-3" style="visibility: hidden;">1</div>
-      <div class="col-sm-6" style="background-color: antiquewhite; color: black;"> 
-        THIS IS WHAT PEOPLE ARE SAYING <br>
-        This is the love <br>
-        of my life <br>
-        I look for the day that we shall get married 
-        <br>
-        THIS IS WHAT PEOPLE ARE SAYING <br>
-        This is the love <br>
-        of my life <br>
-        I look for the day that we shall get married 
-        <br>
+      <div class="col-md-3 mt-4 col-sm-12 " style="visibility: hidden;"> 1 </div>
+
+      <div class="col-md-6 mt-4 col-sm-12 " style="background-color: antiquewhite; color: black;"> 
+        <img class="rating mt-2" src="images/personalimages/ratings/wandie.jpg" alt="photo" >
+        <h3> Wanereeba Innocent</h3>
+        <h4> Full Stack Developer</h4>
+        <p> 
+          Ojok Michael Ocan is an inspiration to many. Personally I have known him since 2014 
+          at Makerere University when we were exploring the different fields in the IT realm. 
+          He is passionate and committed to accomplishing whatever task that comes to him. 
+          As a designer, I have benefitted from his self-taught craft that has branded my Company 
+          to meet latest industry standards and drive forward company objectives.
+        </p>
+
+    
+
       </div>
 
-      <div class="col-sm-3" style="visibility: hidden;">1</div>
+      <div class="col-md-3 mt- " style="visibility: hidden;">1</div>
     </div>
 
 </div>
