--- a/index.html
+++ b/index.html
@@ -136,6 +136,7 @@
  
 </div>
 
+<!-- start of container fluid -->
 <div class="container-fluid" style="background-color: rgb(19, 18, 18); text-align: center; color: white; padding-top: 30px;">
  
   <div class="row col-sm-12 ">
@@ -156,12 +157,8 @@
           As a designer, I have benefitted from his self-taught craft that has branded my Company 
           to meet latest industry standards and drive forward company objectives.
         </p>
-
-    
-
       </div>
-
-      <div class="col-md-3 mt- " style="visibility: hidden;">1</div>
+      <div class="col-md-3 mt-4 " style="visibility: hidden;">1</div>
     </div>
 
 </div>
@@ -171,7 +168,7 @@
 <!-- footer -->
 <div class="container-fluid text-white" style="background-color:rgb(19, 18, 18);">
   <footer>
-    <p> Ojok Michael Ocan</p>
+  
     
     </footer>
 
