--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
     <div class="row">
       <div class="col-md-3 mt-4 col-sm-12 " style="visibility: hidden;"> 1 </div>
 
-      <div class="col-md-6 mt-4 col-sm-12 " style="background-color: antiquewhite; color: black;"> 
+      <div class="col-md-6 mt-4 col-sm-12 " style="background-color: antiquewhite; color: black; border-radius: 10px;"> 
         <img class="rating mt-2" src="images/personalimages/ratings/wandie.jpg" alt="photo" >
         <h3> Wanereeba Innocent</h3>
         <h4> Full Stack Developer</h4>
