--- a/index.html
+++ b/index.html
@@ -160,7 +160,6 @@
       </div>
       <div class="col-md-3 mt-4 " style="visibility: hidden;">1</div>
     </div>
-
 </div>
 
 <!-- END OF CONTAINER -->
@@ -170,9 +169,19 @@
   <footer>
     <div class="row">
       <div class="col-md-4 mt-5" style="padding-left: 50px;">
-        <h5> Contact</h5>
-        
+        <!-- <h5> Contact</h5> -->
+        <div>
+          <h4> Contact</h4>
+          <ul>
+              <li> <img src="Images/socials/gmail.png" alt=""> michaelocan11@gmail.com </li>
+              <br>
+              <li> <img src="Images/socials/phone.png" alt=""> (+46) 729 455 878 </li>
+              <br>
+              <li> <img src="Images/socials/location.jpg" alt=""> Bunkeflostrand, Malmo, Sweden </li>
+          </ul>
+              </div>
       </div>
+      
       <div class="col-md-4 mt-5" style="padding-left: 50px;">
         <h5> Contact</h5>
 
