--- a/index.html
+++ b/index.html
@@ -169,17 +169,16 @@
   <footer>
     <div class="row">
       <div class="col-md-4 mt-5" style="padding-left: 50px;">
-        <!-- <h5> Contact</h5> -->
-        <div>
-          <h4> Contact</h4>
+        <h5 style="margin-left: 27px; font-size: 28px;"> Contact</h5> 
+        <div class="socials">
           <ul>
-              <li> <img src="Images/socials/gmail.png" alt=""> michaelocan11@gmail.com </li>
-              <br>
-              <li> <img src="Images/socials/phone.png" alt=""> (+46) 729 455 878 </li>
-              <br>
-              <li> <img src="Images/socials/location.jpg" alt=""> Bunkeflostrand, Malmo, Sweden </li>
+            <li> <img src="images/socials/gmail.png" alt="email"> michaelocan11@gmail.com </li>
+            <br>
+            <li> <img src="Images/socials/phone.png" alt=""> (+46) 729 455 878 </li>
+            <br>
+            <li> <img src="Images/socials/location.jpg" alt=""> Bunkeflostrand, Malmo, Sweden </li>
           </ul>
-              </div>
+        </div>
       </div>
       
       <div class="col-md-4 mt-5" style="padding-left: 50px;">
