--- a/index.html
+++ b/index.html
@@ -155,7 +155,8 @@
           at Makerere University when we were exploring the different fields in the IT realm. 
           He is passionate and committed to accomplishing whatever task that comes to him. 
           As a designer, I have benefitted from his self-taught craft that has branded my Company 
-          to meet latest industry standards and drive forward company objectives. I love to write code for the better parts of the world
+          to meet latest industry standards and drive forward company objectives. Writing code is a lifestyle
+          
         </p>
       </div>
       <div class="col-md-3 mt-4 " style="visibility: hidden;">1</div>
