--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
           at Makerere University when we were exploring the different fields in the IT realm. 
           He is passionate and committed to accomplishing whatever task that comes to him. 
           As a designer, I have benefitted from his self-taught craft that has branded my Company 
-          to meet latest industry standards and drive forward company objectives. Writing is 
+          to meet latest industry standards and drive forward company objectives. Please find atached report for review
 
         </p>
       </div>
