--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
           at Makerere University when we were exploring the different fields in the IT realm. 
           He is passionate and committed to accomplishing whatever task that comes to him. 
           As a designer, I have benefitted from his self-taught craft that has branded my Company 
-          to meet latest industry standards and drive forward company objectives. Please find atached report for review
+          to meet latest industry standards and drive forward company objectives. Please find atached for your further actions
 
         </p>
       </div>
@@ -175,7 +175,7 @@
           <ul>
             <li> <img src="images/socials/gmail.png" alt="email"> michaelocan11@gmail.com </li>
             <br>
-            <li> <img src="Images/socials/phone.png" alt=""> (+46) 729 455 878 </li>
+            <li style="padding-top: 10px;"> <img src="Images/socials/phone.png" alt=""> (+46) 729 455 878 </li>
             <br>
             <li> <img src="Images/socials/location.jpg" alt=""> Bunkeflostrand, Malmo, Sweden </li>
           </ul>
