--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
           <ul>
             <li> <img src="images/socials/gmail.png" alt="email"> michaelocan11@gmail.com </li>
             <br>
-            <li style="padding-top: 10px;"> <img src="Images/socials/phone.png" alt=""> (+46) 729 455 878 </li>
+            <li > <img src="Images/socials/phone.png" alt=""> (+46) 729 455 878 </li>
             <br>
             <li> <img src="Images/socials/location.jpg" alt=""> Bunkeflostrand, Malmo, Sweden </li>
           </ul>
@@ -183,10 +183,10 @@
       </div>
       
       <div class="col-md-4 mt-5" style="padding-left: 50px;">
-        <h5> Contact</h5>
+        <h5> Quick Links</h5>
 
       </div>
-      <div class="col-md-4 mt-5" style="padding-left: 50px;">
+      <div class="col-md-4 mt-5" col-sm-12 style="padding-left: 50px;">
         <h5> Contact</h5>
 
       </div>
