--- a/index.html
+++ b/index.html
@@ -183,11 +183,11 @@
       </div>
       
       <div class="col-md-4 mt-5" style="padding-left: 50px;">
-        <h5> Quick Links</h5>
+        <h5 style="margin-left: 27px; font-size: 28px;"> Quick Links</h5>
 
       </div>
       <div class="col-md-4 mt-5" col-sm-12 style="padding-left: 50px;">
-        <h5> Contact</h5>
+        <h5 style="margin-left: 27px; font-size: 28px;"> Contact</h5>
 
       </div>
     </div>    
