--- a/index.html
+++ b/index.html
@@ -182,10 +182,15 @@
         </div>
       </div>
       
+      <!-- Quick links -->
       <div class="col-md-4 mt-5" style="padding-left: 50px;">
         <h5 style="margin-left: 27px; font-size: 28px;"> Quick Links</h5>
 
+
       </div>
+
+      <!-- Follow Me -->
+
       <div class="col-md-4 mt-5" col-sm-12 style="padding-left: 50px;">
         <h5 style="margin-left: 27px; font-size: 28px;"> Contact</h5>
 
