--- a/index.html
+++ b/index.html
@@ -185,14 +185,17 @@
       <!-- Quick links -->
       <div class="col-md-4 mt-5" style="padding-left: 50px;">
         <h5 style="margin-left: 27px; font-size: 28px;"> Quick Links</h5>
-
-
+        <a href="#" class="links"> About </a>
+        <br><br>
+        <a href="#" class="links"> Portfolio</a>
+        <br><br>
+        <a href="#" class="links"> Contact Me </a>
       </div>
 
       <!-- Follow Me -->
 
       <div class="col-md-4 mt-5" col-sm-12 style="padding-left: 50px;">
-        <h5 style="margin-left: 27px; font-size: 28px;"> Contact</h5>
+        <h5 style="margin-left: 27px; font-size: 28px;"> Contact </h5>
 
       </div>
     </div>    
