--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
       <!-- Follow Me -->
 
       <div class="col-md-4 mt-5" col-sm-12 style="padding-left: 50px;">
-        <h5 style="margin-left: 27px; font-size: 28px;"> Contact </h5>
+        <h5 style="margin-left: 27px; font-size: 28px;"> Follow Me </h5>
 
       </div>
     </div>    
