--- a/index.html
+++ b/index.html
@@ -185,17 +185,28 @@
       <!-- Quick links -->
       <div class="col-md-4 mt-5" style="padding-left: 50px;">
         <h5 style="margin-left: 27px; font-size: 28px;"> Quick Links</h5>
-        <a href="#" class="links"> About </a>
+        <a href="about.html" class="links"> About </a>
         <br><br>
-        <a href="#" class="links"> Portfolio</a>
+        <a href="portfolio.html" class="links"> Portfolio</a>
         <br><br>
-        <a href="#" class="links"> Contact Me </a>
+        <a href="contact.html" class="links"> Contact Me </a>
       </div>
 
       <!-- Follow Me -->
 
       <div class="col-md-4 mt-5" col-sm-12 style="padding-left: 50px;">
         <h5 style="margin-left: 27px; font-size: 28px;"> Follow Me </h5>
+        
+        <div class="media">
+          <a href="home.html"><img src="Images/socials/socials_final/Facebook fit.jpg" alt=""></a>
+
+          <a href="home.html"><img src="Images/socials/socials_final/twitter.png" alt=""></a>
+
+          <a href="home.html"><img src="Images/socials/socials_final/Instagram.png" alt=""></a>
+
+          <a href="home.html"><img src="Images/socials/socials_final/linkedIn.png" alt=""></a>   
+
+      </div>
 
       </div>
     </div>    
