--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
       <h1 class="text-center"> What I offer </h1>
       <p class="text-center"> Here are the things that I can do in my line of speciality </p>
     </div>
-
+<!-- wed designing -->
     <div class="row" style="height: 280px;">
       <div class="col-md-4 col-sm-12 mt-5">
         <img src="images/services/monitor.png" alt="#"
@@ -100,13 +100,14 @@
         <h3>
           Web Designing
         </h3>
-        <p class="text-center "> <a href="#" class="text-decoration-none text-white">
+        <p class="text-center "> <a href="portfolio.html" class="text-decoration-none text-white">
           I create websites with great user experience, stunning graphics package 
           alongside and they are easy to manage
         </a>
         </p>        
       </div>
 
+      <!-- UX/UI Design -->
       <div class="col-md-4 col-sm-12 mt-5">
         <img src="images/services/developer.png" alt="" 
          style="width: 70px; height: 70px; margin-left: auto; margin-right: auto; display: block;">
@@ -119,6 +120,8 @@
         </a> 
         </p>
       </div>
+
+      <!-- GIS Development -->
 
       <div class="col-md-4 col-sm-12 mt-5">
         <img src="images/services/gis.jpg" alt=""
@@ -133,7 +136,7 @@
         </p>
       </div>
     </div>
- 
+    
 </div>
 
 <!-- start of container fluid -->
