--- a/about.html
+++ b/about.html
@@ -25,22 +25,22 @@
         <div class="col-md-8 col-sm-12"> 
           <ul class="nav justify-content-center">
             <li class="nav-item">
-              <a class="nav-link text-white" href="#" style="font-size: 23px;">
+              <a class="nav-link text-white" href="index.html" style="font-size: 23px;">
                 Home 
               </a>
             </li>
             <li class="nav-item">
-              <a class="nav-link text-white" href="#" style="font-size: 23px;">
+              <a class="nav-link text-white" href="about.html" style="font-size: 23px;">
                 About
               </a>
             </li>
             <li class="nav-item">
-              <a class="nav-link text-white" href="#" style="font-size: 23px;">
+              <a class="nav-link text-white" href="portfolio.html" style="font-size: 23px;">
                 Portfolio
               </a>
             </li>
             <li class="nav-item">
-              <a class="nav-link text-white" href="#" style="font-size: 23px;">
+              <a class="nav-link text-white" href="contact.html" style="font-size: 23px;">
                 Contact
               </a>
             </li>
@@ -55,7 +55,7 @@
 
 <div class="container-fluid" >
   <!-- row -->
-  <div class="row" style="background-image: url(Images/background/background_image.jpg); height: 400px;">
+  <div class="row" style="background-image: url(Images/background/banner/banner_contact.jpg); height: 400px;">
     
     <!-- column 1 -->
     <div class="col-md-8 col-sm-12 mt-5 text-white" >
