--- a/index.html
+++ b/index.html
@@ -25,22 +25,22 @@
         <div class="col-md-8 col-sm-12"> 
           <ul class="nav justify-content-center">
             <li class="nav-item">
-              <a class="nav-link text-white" href="#" style="font-size: 23px;">
+              <a class="nav-link text-white" href="index.html" style="font-size: 23px;">
                 Home 
               </a>
             </li>
             <li class="nav-item">
-              <a class="nav-link text-white" href="#" style="font-size: 23px;">
+              <a class="nav-link text-white" href="about.html" style="font-size: 23px;">
                 About
               </a>
             </li>
             <li class="nav-item">
-              <a class="nav-link text-white" href="#" style="font-size: 23px;">
+              <a class="nav-link text-white" href="portfolio.html" style="font-size: 23px;">
                 Portfolio
               </a>
             </li>
             <li class="nav-item">
-              <a class="nav-link text-white" href="#" style="font-size: 23px;">
+              <a class="nav-link text-white" href="contact.html" style="font-size: 23px;">
                 Contact
               </a>
             </li>
