--- a/about.html
+++ b/about.html
@@ -18,12 +18,12 @@
 <header>
     <div class="container-fluid">
       <!-- row -->
-      <div class="row" style="height: 50px; background-color: rgb(26, 41, 92);">
+      <div class="row" style="height: 50px; background-color: black;">
         <!-- column 1 -->
         <div class="col-md-4 col-sm-12 bg"></div>
         <!-- column 2 -->
         <div class="col-md-8 col-sm-12"> 
-          <ul class="nav justify-content-center">
+          <ul class="nav justify-content-end">
             <li class="nav-item">
               <a class="nav-link text-white" href="index.html" style="font-size: 23px;">
                 Home 
@@ -55,7 +55,7 @@
 
 <div class="container-fluid">
   <!-- row -->
-  <div class="row" style="background-color:  rgb(26, 41, 92); height: 200px;">
+  <div class="row" style="background-color:  rgb(16, 14, 22); height: 200px;">
                 <h1 class="text-center mt-4 text-white"> About Me </h1>
                 <h3 class="text-white">Know more about Me </h3>
 
@@ -65,9 +65,9 @@
 <div class="container-fluid bg-black text-white">
   
 <!-- wed designing -->
-    <div class="row" style="height: 280px;">
+    <div class="row" style="height: 450px;">
       <div class="col-md-4 col-sm-12 mt-5">
-        <img src="images/personalimages/personal_pics/dopeboy2.jpg" alt="personal_images" width="350px" height="350px">
+        <img src="images/personalimages/personal_pics/dopeboy2.jpg" alt="personal_images" width="350px" height="350px" style="border-radius: 5px;" >
                 
       </div>
 
