--- a/index.html
+++ b/index.html
@@ -18,12 +18,12 @@
 <header>
     <div class="container-fluid">
       <!-- row -->
-      <div class="row" style="height: 50px; background-color: rgb(19, 34, 87);">
+      <div class="row" style="height: 50px; background-color:black;">
         <!-- column 1 -->
         <div class="col-md-4 col-sm-12 bg"></div>
         <!-- column 2 -->
         <div class="col-md-8 col-sm-12"> 
-          <ul class="nav justify-content-center">
+          <ul class="nav justify-content-end">
             <li class="nav-item">
               <a class="nav-link text-white" href="index.html" style="font-size: 23px;">
                 Home 
