--- a/about.html
+++ b/about.html
@@ -65,7 +65,7 @@
 <div class="container-fluid bg-black text-white">
   
 <!-- wed designing -->
-    <div class="row" style="height: 600px;">
+    <div class="row" style="height: 500px;">
       <div class="col-md-4 col-sm-12 mt-3">
         <img src="images/personalimages/personal_pics/dopeboy2.jpg" alt="personal_images" 
         width="400px" height="450px" style="border-radius: 5px; margin-left: auto; margin-right: auto; display: block;" >
@@ -89,13 +89,12 @@
         <h3 style="text-align: left; font-size: 30px; color: rgb(50, 154, 214);">
            My Skills
           </h3>
-          <p style="text-align: justify; font-size: 20px; padding-right: 20px;" > 
-              I am a self-driven aspiring software developer who is passionate about creating world-class software products and leading highly effective teams. 
-              I am currently pursuing my masters in Urban business and development from Malmo University and a certificate in Software development (bootcamp).
-              I value teamwork and also enjoy contributing ideas to improving team delivery and customer satisfaction. I also have excellent business, 
-              management, and analytical skills. I am a Front-end developer with skills in Front End | HTML, CSS, UI/UX, Project Management.            
-              During my free time, I also volunteer teaching to equip students with industrial on-demand skills.
-          </p>
+          <!-- Fron-end skills -->
+         <p style="font-size: 23px; color: rgb(231, 237, 240);"> Front end skills: <span style="font-size: 20px; color: white;"> HTML, CSS, Javascript, Bootstrap, UX/UI Designs </span></p>
+
+         <!-- GIS Skills -->
+         <p style="font-size: 23px; color: rgb(231, 237, 240);"> GIS Skills: <span style="font-size: 20px; color: white;"> Arc GIS, Arcpy, QGIS </span></p>
+         
       </div>
       
     </div>
