--- a/about.html
+++ b/about.html
@@ -114,8 +114,8 @@
     </p>
     </div>
 
-      <div class="col-md-4 mt-4 col-sm-12 " style="background-color: antiquewhite; color: black; border-radius: 10px;"> 
-        <img src="" alt="">
+      <div class="col-md-4 mt-4 col-sm-12"> 
+        <img src="images/personalimages/personal_pics/dopeboy2.jpg" alt="goal" width="300px" height="350px">
     
         
       </div>
