--- a/portfolio.html
+++ b/portfolio.html
@@ -55,21 +55,19 @@
 
 <div class="container-fluid" >
   <!-- row -->
-  <div class="row" style="background-image: url(Images/background/background_image.jpg); height: 250px;">
+  <div class="row" style="background-image: url(Images/background/banner/banner.jpg); height: 250px;">
     
-    <h3>
+    <h1 class="text-center mt-5 text-white"> Portfolio </h1>
 
-    </h3>
+    <h3 class="text-white"> Check my rescent work </h3>
 
   </div>
 </div>
+
 <!-- banner end -->
 <div class="container-fluid bg-black text-white">
   
-    <div class="row">
-      <h1 class="text-center"> What I offer </h1>
-      <p class="text-center"> Here are the things that I can do in my line of speciality </p>
-    </div>
+    
 <!-- wed designing -->
     <div class="row" style="height: 280px;">
       <div class="col-md-4 col-sm-12 mt-5">
