--- a/portfolio.html
+++ b/portfolio.html
@@ -71,11 +71,10 @@
 <!-- wed designing -->
     <div class="row" style="height: 280px;">
       <div class="col-md-2 col-sm-12 mt-5" style="visibility: hidden;" >
-        1
-               
+
       </div>
 
-      <!-- UX/UI Design -->
+      <!-- All portfolio -->
       <div class="col-md-8 col-sm-12 mt-5">
         <div class="portfoliobuttons">
           <button><a href="portfolio.html">Show All</a></button>
@@ -84,12 +83,14 @@
           <button><a href="UX_Design.html"> Ui/Ux Design</a></button>
       </div>
       </div>
-
-      <!-- GIS Development -->
-
+      <!-- hidden  -->
       <div class="col-md-2 col-sm-12 mt-5"  style="visibility: hidden;" >
        
       </div>
+    </div>
+
+    <div class="row" >
+
     </div>
 
 </div>
