--- a/portfolio.html
+++ b/portfolio.html
@@ -65,11 +65,11 @@
 </div>
 
 <!-- banner end -->
-<div class="container-fluid bg-black text-white">
+<div class="container-fluid bg-black text-white" style="height: auto; padding-bottom: 20px;">
   
     
 <!-- wed designing -->
-    <div class="row" style="height: 280px;">
+    <div class="row">
       <div class="col-md-2 col-sm-12 mt-5" style="visibility: hidden;" >
 
       </div>
@@ -90,19 +90,8 @@
     </div>
     <!-- websites  -->
 
-    <div class="row" >
-    <div class="col-md-3 col-sm-12">
-      <img src="images/Portfolio/websites/first_website.jpg" alt="first_website" width="250px" height="250px">
-    </div>
-    <div class="col-md-3 col-sm-12">
-      <img src="images/Portfolio/websites/first_website.jpg" alt="first_website" width="250px" height="250px">
-    </div>
-    <div class="col-md-3 col-sm-12">
-      <img src="images/Portfolio/websites/first_website.jpg" alt="first_website" width="250px" height="250px">
-    </div>
-    <div class="col-md-3 col-sm-12">
-      <img src="images/Portfolio/websites/first_website.jpg" alt="first_website" width="250px" height="250px">
-    </div>
+    <div class="row mt-5" >
+    
     </div>
 
 </div>
