--- a/ux_design.html
+++ b/ux_design.html
@@ -40,7 +40,7 @@
               </a>
             </li>
             <li class="nav-item">
-              <a class="nav-link text-white" href="contact.html" style="font-size: 23px;">
+              <a class="nav-link text-white" href="#" style="font-size: 23px;">
                 Contact
               </a>
             </li>
