--- a/portfolio.html
+++ b/portfolio.html
@@ -94,6 +94,7 @@
       <div class="websites">
         <div>
           <img src="images/Portfolio/websites/first_website.jpg" alt="">
+          <p class="text-center"><a href="https://www.ojokmichaelocan.com"> My personal website</a> </p>
         </div>
         <div>
           <img src="images/Portfolio/websites/Mic_construction_company.jpg" alt="">
