--- a/portfolio.html
+++ b/portfolio.html
@@ -93,24 +93,29 @@
     <div class="row mt-5">
       <div class="websites">
         <div>
-          <img src="images/Portfolio/websites/first_website.jpg" alt="">
+          <img src="images/Portfolio/websites/first_website.jpg" alt="#">
           <p class="text-center"><a href="https://www.ojokmichaelocan.com"> My personal website</a> </p>
         </div>
         <div>
-          <img src="images/Portfolio/websites/Mic_construction_company.jpg" alt="">
+          <img src="images/Portfolio/websites/Mic_construction_company.jpg" alt="#">
+          <p class="text-center"><a href="https://www.ojokmichaelocan.com"> My personal website</a> </p>
         </div>
         <div>
-          <img src="images/Portfolio/websites/personal_website.jpg" alt="">
+          <img src="images/Portfolio/websites/personal_website.jpg" alt="#">
+          <p class="text-center"><a href="https://www.ojokmichaelocan.com"> My personal website</a> </p>
         </div>
         <div>
-          <img src="images/Portfolio/websites/soft_rest_company.jpg" alt="">
+          <img src="images/Portfolio/websites/soft_rest_company.jpg" alt="#">
+          <p class="text-center"><a href="https://www.ojokmichaelocan.com"> My personal website</a> </p>
         </div>
         <!-- more websites -->
         <div>
           <img src="images/Portfolio/websites/soft_rest_company.jpg" alt="">
+          <p class="text-center"><a href="https://www.ojokmichaelocan.com"> My personal website</a> </p>
         </div>
         <div>
           <img src="images/Portfolio/websites/soft_rest_company.jpg" alt="">
+          <p class="text-center"><a href="https://www.ojokmichaelocan.com"> My personal website</a> </p>
         </div>
       </div>
     
