--- a/portfolio.html
+++ b/portfolio.html
@@ -94,11 +94,11 @@
       <div class="websites">
         <div>
           <img src="images/Portfolio/websites/first_website.jpg" alt="#">
-          <p class="text-center"><a href="https://www.ojokmichaelocan.com"> My personal website</a> </p>
+          <p class="text-center"><a href="https://www.ojokmichaelocan.com"> Green Agribusiness</a> </p>
         </div>
         <div>
           <img src="images/Portfolio/websites/Mic_construction_company.jpg" alt="#">
-          <p class="text-center"><a href="https://www.ojokmichaelocan.com"> My personal website</a> </p>
+          <p class="text-center"><a href="https://www.ojokmichaelocan.com"> Mic Construction Company</a> </p>
         </div>
         <div>
           <img src="images/Portfolio/websites/personal_website.jpg" alt="#">
@@ -106,7 +106,7 @@
         </div>
         <div>
           <img src="images/Portfolio/websites/soft_rest_company.jpg" alt="#">
-          <p class="text-center"><a href="https://www.ojokmichaelocan.com"> My personal website</a> </p>
+          <p class="text-center"><a href="https://www.ojokmichaelocan.com"> Soft-rest Company Limited </a> </p>
         </div>
         <!-- more websites -->
         <div>
