--- a/gis.html
+++ b/gis.html
@@ -91,6 +91,10 @@
     <!-- websites  -->
 
     <div class="row mt-5">
+      <div class="col-md-8 col-sm-12">
+        <img src="images/gis/median_income_map.png" alt="median_income_map" width="450px" height="500px">
+
+      </div>
       
     
     </div>
