--- a/gis.html
+++ b/gis.html
@@ -92,7 +92,27 @@
 
     <div class="row mt-5">
       <div class="col-md-8 col-sm-12">
-        <img src="images/gis/median_income_map.png" alt="median_income_map" width="450px" height="500px">
+        <img src="images/gis/median_income_map.png" alt="median_income_map" width="95%" height="600px">
+
+      </div>
+      <div class="col-md-4 col-sm-12">
+        <h3 class="text-center"> Map showing the median Income in Malmo</h3>
+        <p style="text-align: justify;">
+          This is a map that shows the median income of the different districts in Malmo, Sweden.
+          The tools utilised include the followings:
+        </p>
+
+      </div>
+      <div class="col-md-8 col-sm-12 mt-5">
+        <img src="images/gis/median_income_map.png" alt="median_income_map" width="95%" height="600px">
+
+      </div>
+      <div class="col-md-4 col-sm-12 mt-5">
+        <h3 class="text-center"> Map showing the median Income in Malmo</h3>
+        <p style="text-align: justify;">
+          This is a map that shows the median income of the different districts in Malmo, Sweden.
+          The tools utilised include the followings:
+        </p>
 
       </div>
       
