--- a/gis.html
+++ b/gis.html
@@ -80,7 +80,7 @@
           <button><a href="portfolio.html">Show All</a></button>
           <button><a href="portfolio.html">Websites</a></button>
           <button><a href="gis.html">GIS </a></button>
-          <button><a href="UX_Design.html"> Ui/Ux Design</a></button>
+          <button><a href="ux_design.html"> Ui/Ux Design</a></button>
       </div>
       </div>
       <!-- hidden  -->
@@ -96,7 +96,7 @@
 
       </div>
       <div class="col-md-4 col-sm-12">
-        <h3 class="text-center"> Map showing the median Income in Malmo</h3>
+        <h3 style="text-align: left; font-size: 25px;"> Map showing the median Income in Malmo</h3>
         <p style="text-align: justify;">
           This is a map that shows the median income of the different districts in Malmo, Sweden.
           The tools utilised include the followings:
@@ -104,13 +104,13 @@
 
       </div>
       <div class="col-md-8 col-sm-12 mt-5">
-        <img src="images/gis/median_income_map.png" alt="median_income_map" width="95%" height="600px">
+        <img src="images/gis/spatial aggregation map.png" alt="median_income_map" width="95%" height="600px">
 
       </div>
       <div class="col-md-4 col-sm-12 mt-5">
-        <h3 class="text-center"> Map showing the median Income in Malmo</h3>
+        <h3 style="text-align: left; font-size: 25px;"> Spatial aggregation Map of Malmo </h3>
         <p style="text-align: justify;">
-          This is a map that shows the median income of the different districts in Malmo, Sweden.
+          This is a map that shows the median income of the different districts in Malmo, Sweden
           The tools utilised include the followings:
         </p>
 
