--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
         <h3>
           UI/UX Design
         </h3>
-        <p class="text-center"> <a href="#" class="text-decoration-none text-white">
+        <p class="text-center"> <a href="ux_design.html" class="text-decoration-none text-white">
           I create worldclass customised softwares that serve the market 
           needs for businesses , startups and organisations.
         </a> 
@@ -129,7 +129,7 @@
         <h3>
           GIS Analysis / Development
         </h3>
-        <p class="text-center"> <a href="#" class="text-decoration-none text-white " >
+        <p class="text-center"> <a href="gis.html" class="text-decoration-none text-white " >
           I create websites great user experience, stunning graphics package
           alongside and they are easy to manage.
         </a>
