--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
         <h3>
           Web Designing
         </h3>
-        <p class="text-center "> <a href="portfolio.html" class="text-decoration-none text-white">
+        <p class="text-center "> <a href="portfolio.html" class="text-decoration-none text-white services">
           I create websites with great user experience, stunning graphics package 
           alongside and they are easy to manage
         </a>
