--- a/Personal_website3/OjokMichaelOcan/index.html
+++ b/Personal_website3/OjokMichaelOcan/index.html
@@ -119,8 +119,7 @@
                       </h5>
                     </div>
                     <p class="lead" style="text-align: justify;">
-                      My goal in life is to create value wherever I am , and change the lives of people/organizations/startups in 
-                      the world using the power of technology. I also want to be a great software engineer and user experience designer 
+                      My goal in life is to create value wherever I am , and change the lives of people using the power of technology. I also want to be a great software engineer and user experience designer 
                       capable of improving my skill set to keep delivering top notch products and leading highly effective teams to create 
                       great products/personal projects. I love challenges, learning new things and also supporting my peers through 
                       mentorship and training in my strong areas. I like to change the world and the people who live 
