--- a/Personal_website3/OjokMichaelOcan/bootstrap practise/bootstrap_practise/index.html
+++ b/Personal_website3/OjokMichaelOcan/bootstrap practise/bootstrap_practise/index.html
@@ -67,6 +67,10 @@
   <h5>h5 heading <small>secondary text</small></h5>
   <h6>h6 heading <small>secondary text</small></h6>
 
+  <!-- mark -->
+  <p> Ojok Michael Ocan is <mark> You should take note </mark>  here  </p>
+  
+
   </div>
   
 
