--- a/Personal_website3/OjokMichaelOcan/index.html
+++ b/Personal_website3/OjokMichaelOcan/index.html
@@ -316,7 +316,7 @@
                         Ojok Michael Ocan is an inspiration to many. Personally I have known him since 2014 at 
                         Makerere University when we were exploring the different fields in the IT realm. 
                         He is passionate and committed to accomplishing whatever task that comes to him. 
-                        As a designer, I have benefitted from his self-taught craft that has branded my Company 
+                        I have benefitted from his self-taught craft that has branded my Company 
                         to meet latest industry standards.
                       </p>
                     </div>
