--- a/Personal_website3/OjokMichaelOcan/index.html
+++ b/Personal_website3/OjokMichaelOcan/index.html
@@ -297,7 +297,7 @@
                         when we were exploring the different fields in the IT realm. 
                         He is passionate and committed to accomplishing whatever task that comes to him. As a designer and a developer, 
                         I have benefitted from his self-taught craft that has branded my company to be the 
-                        to meet latest industry standards and drive forward company objectives.
+                        to meet latest industry standards.
                       </p>
                     </div>
                     
