--- a/Personal_website3/OjokMichaelOcan/index.html
+++ b/Personal_website3/OjokMichaelOcan/index.html
@@ -295,9 +295,7 @@
                         
                         Ojok Michael Ocan is an inspiration to many. Personally I have known him since 2008 at St. Joseph's College Layibi 
                         when we were exploring the different fields in the IT realm. 
-                        He is passionate and committed to accomplishing whatever task that comes to him. As a designer and a developer, 
-                        I have benefitted from his self-taught craft that has branded my company to be the 
-                        to meet latest industry standards.
+                        He is passionate and committed to accomplishing whatever task that comes to him.
                       </p>
                     </div>
                     
