--- a/Personal_website3/OjokMichaelOcan/index.html
+++ b/Personal_website3/OjokMichaelOcan/index.html
@@ -293,9 +293,9 @@
                       <h3 class="text-white"> Full stack developer</h3>
                       <p class="description lead ">
                         
-                        Ojok Michael Ocan is an inspiration to many. Personally I have known him since 2008 at St. Joseph's College Layibi 
-                        when we were exploring the different fields in the IT realm. 
-                        He is passionate and committed to accomplishing whatever task that comes to him.
+                        Ojok Michael Ocan is an inspiration to many. Personally I have 
+                        known him since 2008 at St. Joseph's College Layibi when we were 
+                        exploring the different fields in the IT realm.
                       </p>
                     </div>
                     
