--- a/Personal_website3/OjokMichaelOcan/index.html
+++ b/Personal_website3/OjokMichaelOcan/index.html
@@ -295,12 +295,12 @@
                         
                         Ojok Michael Ocan is an inspiration to many. Personally I have 
                         known him since 2008 at St. Joseph's College Layibi when we were 
-                        exploring the different fields in the IT realm.
+                        exploring the different fields in the IT realm.oooo ojok michael ocan.
                       </p>
-                    </div>
-                    
+                    </div>                    
                   </div>
-                </div><!-- End testimonial item -->
+                </div>
+                <!-- End testimonial item -->
 
                 <div class="swiper-slide">
                   <div class="testimonial-box">
