--- a/Personal_website3/OjokMichaelOcan/bootstrap practise/bootstrap_practise/index.html
+++ b/Personal_website3/OjokMichaelOcan/bootstrap practise/bootstrap_practise/index.html
@@ -73,7 +73,18 @@
 <p>
   the <abbr title="World Health Organisation"> WHO </abbr> was founded in 1948.
 </p>
+
+<!-- blockquote  -->
+  <blockquote>
+    <p>
+      For 50 years , WWF has been protecting the future of nature. The world's leading conversation organization, 
+      WWF works in 100 countries and is supported by 1.2 million members in the United States and close to 5 million globally.
+    </p>
+    <footer class="blockquote-footer"> From WWF's website</footer>
+  </blockquote>
+
   </div>
+  
   
 
   
