--- a/Personal_website3/OjokMichaelOcan/bootstrap practise/bootstrap_practise/index.html
+++ b/Personal_website3/OjokMichaelOcan/bootstrap practise/bootstrap_practise/index.html
@@ -82,6 +82,13 @@
     </p>
     <footer class="blockquote-footer"> From WWF's website</footer>
   </blockquote>
+  <!-- description lists dl -->
+  <dl>
+    <dt>Coffee</dt>
+    <dd>-black hot drink</dd>
+    <dt> Milk </dt>
+    <dd>- white cold drink </dd>
+  </dl>
 
   </div>
   
