--- a/Personal_website3/OjokMichaelOcan/bootstrap practise/bootstrap_practise/index.html
+++ b/Personal_website3/OjokMichaelOcan/bootstrap practise/bootstrap_practise/index.html
@@ -53,19 +53,6 @@
 <div class="container">
   <div class="row">
     <h1>My First Bootstrap Page</h1>
-    <p>This is some text.</p>
-    <h3>
-      I am called <small> ojok michael ocan </small>
-    </h3>
-    <h5> I am called <small> ojok michael ocan </small></h5>
-
-    <h1>h1 heading <small>secondary text</small></h1>
-  <h2>h2 heading <small>secondary text</small></h2>
-  <h2>h2 heading <small>secondary text</small></h2>
-  <h3>h3 heading <small>secondary text</small></h3>
-  <h4>h4 heading <small>secondary text</small></h4>
-  <h5>h5 heading <small>secondary text</small></h5>
-  <h6>h6 heading <small>secondary text</small></h6>
 
   <!-- mark -->
   <p> Ojok Michael Ocan is <mark> You should take note </mark>  here  </p>
@@ -89,6 +76,21 @@
     <dt> Milk </dt>
     <dd>- white cold drink </dd>
   </dl>
+  <!-- code snippets -->
+  <p>
+    The following HTML elements: <code> span </code>, <code> section </code>, <code>div</code>
+  </p>
+
+  <!-- Carousel -->
+  <div id="demo" class="carousel slide" data-bs-ride="carousel">
+
+  </div>
+
+  <!-- Indicators /dots -->
+  <div class="carousel-indicators">
+    <button type="button" data-bs-target="#demo" data-bs-slide-to="0" class="active"></button>
+
+  </div>
 
   </div>
   
