--- a/Personal_website3/OjokMichaelOcan/bootstrap practise/bootstrap_practise/index.html
+++ b/Personal_website3/OjokMichaelOcan/bootstrap practise/bootstrap_practise/index.html
@@ -91,6 +91,29 @@
       <button type="button" data-bs-target="#demo" data-bs-slide-to="2"></button>  
     </div>
 
+    <!-- the slideshow/carousel -->
+    <div class="carousel-inner">
+      <div class="carousel-item active">
+        <img src="la.jpg" alt="Los Angeles" class="d-block" style="width:100%; height: 200px;">
+      </div>
+      <div class="carousel-item">
+        <img src="" alt="Chicago" class="d-block" style="width:100%; height: 200px;">
+      </div>
+      <div class="carousel-item">
+        <img src="../bootstrap_practise/Images/personalimages/personal_pics/dopeboy.jpg" alt="New York" class="d-block" style="width:100%; height: 200px;">
+      </div>
+
+    </div>
+
+    <!-- Left and right controls/icons -->
+  <button class="carousel-control-prev" type="button" data-bs-target="#demo" data-bs-slide="prev">
+    <span class="carousel-control-prev-icon"></span>
+  </button>
+  <button class="carousel-control-next" type="button" data-bs-target="#demo" data-bs-slide="next">
+    <span class="carousel-control-next-icon"></span>
+  </button>
+</div>
+
   </div>
 
   
